# server/internal/usercase/tvshowlibrary/model.go
@@ -4,7 +4,12 @@ import "time"
 
 type Image struct {
 	ID       string
+	W92      string
+	W154     string
+	W185     string
 	W342     string
+	W500     string
+	W780     string
 	Original string
 }
 
